Apply a bunch of IntelliJ's Java migration hints